<resources>
    <string name="app_name">DateIt</string>
    <string name="title_home">Home</string>
    <string name="title_homePage">Welcome to DatE-IT 2020!</string>
    <string name="intro_homePage">DatE-IT is a labour fair aimed towards students studying in the fields of computer engineering, electrical engineering and information technology. At Chalmers there are around 2000 students divided in to these 3 areas. The fair is therefor a great opportunity for students and companies in these fields to meet and network.</string>
    <string name="date_homePage">DatE-IT 2020 will take place on November 19th.</string>
    <string name="openingHours_homePage">Opening hours: 10 - 16</string>
    <string name="studentBtn_homePage">For students</string>
    <string name="faqBtn_homePage">FAQ</string>
    <string name="lunch_homePage">Lunch lectures</string>
    <string name="lunchList_day1_homePage">15/11 Monday</string>
    <string name="lunchList_day2_homePage">17/11 Wednesday</string>
    <string name="lunchList_day3_homePage">18/11 Thursday</string>
    <string name="lunchList_time1_homePage">12:00</string>
    <string name="lunchList_time2_homePage">12:00</string>
    <string name="lunchList_time3_homePage">12:00</string>
    <string name="lunchList_location1_homePage">HA4</string>
    <string name="lunchList_location2_homePage">HA4</string>
    <string name="lunchList_location3_homePage">HC4</string>
    <string name="contactsTitle_homePage">Contacts</string>
    <string name="contactsMail_homePage">If you have any questions or concerns, please send an e-mail to <u>info@date-it.se</u></string>
    <string name="contactsFb_homePage">Like us on <u>Facebook</u> to stay tuned!</string>
    <string name="contactsAddress_homePage"><u>Sven Hultins gata 8, 412 58 Göteborg</u></string>
    <string name="CompanyName">CompanyName</string>
    <string name="GoToCompany">CompanyBtn</string>
    <string name="IT">IT</string>
    <string name="CS">CS</string>
    <string name="Elektro">Elektro</string>
    <string name="AvailableJobs">JobOffer</string>
    <string name="About">About</string>
    <string name="AboutInfo">Lorem ipsum dkew kgerk rekg ekrg kergk ekrg ke gker krgke gkerkg kerkgekr kgekrg</string>
    <string name="Information">Information</string>
    <string name="Website">Website</string>
    <string name="Contact">Contact</string>
    <string name="Employees">Employees</string>
    <string name="Offices">Offices</string>
    <string name="Notes">Notes</string>
    <string name="AddNotes">Add Notes</string>
    <string name="Employment">Employment</string>
    <string name="SummerJob">Summer Job</string>
    <string name="MasterThesis">Master Thesis</string>
    <string name="title_dashboard">Companies</string>
    <string name="title_notifications">My Pages</string>
    <string name="ForStudents">Tips for students</string>
    <string name="Prepare">Prepare</string>
    <string name="PrepareText">Start by going through the catalog and select the companies you are interested in. Do it carefully, visit the companies websites to understand more what they are working on. Decide which companies you should visit during DatE-IT and focus on them, it\'s much better than aimlessly walking around among all of the companies. \n \n
Are you at the stage of finding a job or thesis project and want the company to take an interest in you? Think about how you want to present yourself. You can practice at home on a short pitch or write down some notes that will help you present yourself in the best way possible. By being well-informed and prepared, you can match your skills and abilities against the company\'s. It is not only your education, specialization and elective courses that are important. Trust and overseas experience is often seen as an advantage. Your personality will determine whether you get the job or not. Think about yourself, who are you? What do you want? What do you know?</string>

    <string name="Resume">Resumé</string>
    <string name="ResumeText">During the fair it is possible to attend interviews with a number of companies. To take advantage of this opportunity, you must submit your résumé. More information on how to do this will come later.</string>

    <string name="MakeContact">Make contact</string>
    <string name="MakeContactText">The exhibitors at DatE-IT will most probably not give you a thesis project or a job immediately. If you make contact with the company representer, ask for a business card and inform that person that you would like to contact him or her again. Make sure to be remembered! You can give the company your own business card or your résumé. Keep track of which company that have received your résumé. Write down and document what has been said and how possible future contact will take place.

If you choose to leave your résumé, remember that it is your way of marketing yourself. Make sure that the résumé clearly states who you are, what you know and also what your goals are. Be as thorough as possible when you write your résumé. It should be easy for the employer to understand your competense. If you contact different companies, you can give them different résumés which are tailor-made to each company.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- IMG descriptions -->
    <string name="logoDesc">Logo</string>
    <string name="frontImgDesc">Picture of the fair</string>
    <string name="mailIconDesc">Picture of the fair</string>
    <string name="fbIconDesc">Picture of the fair</string>
    <string name="locationIconImgDesc">Picture of the fair</string>


    <string name="MyPage_favourites">Favourites</string>
    <string name="searchHint">Search</string>
    <string name="filter_by_program">Filter by program</string>
    <string name="filter_by_offers">Filter by offers</string>
    <string name="MyPage">My page</string>
    <string name="AddFavoritesText">Add your favorites by clicking on the heart symbol in a company...</string>
    <string name="AddNoteText">Write a note on a company to make it appear here...</string>
    <string name="arrow_image_desc">arrow image</string>
</resources>
