<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dateit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_companyDetails"
            app:destination="@id/companyDetails" />
        <action
            android:id="@+id/action_navigation_home_to_fragment_second"
            app:destination="@id/fragment_second" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dateit.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dateit.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/companyDetails"
        android:name="com.example.dateit.ui.home.CompanyDetailsFragment"
        android:label="company_details_fragment"
        tools:layout="@layout/company_details_fragment" />
    <fragment
        android:id="@+id/fragment_second"
        android:name="com.example.dateit.faqFragment"
        android:label="fragment_second"
        tools:layout="@layout/fragment_faq" />
</navigation>
