<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.companyDetails">

    <TextView
        android:id="@+id/companyName"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:text="@string/CompanyName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/AvailableOffers"
        android:layout_width="412dp"
        android:layout_height="88dp"
        android:layout_marginTop="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName" />

    <TextView
        android:id="@+id/AboutInfo"
        android:layout_width="399dp"
        android:layout_height="185dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="233dp"
        android:text="@string/AboutInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About" />

    <TextView
        android:id="@+id/About"
        android:layout_width="96dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="3dp"
        android:text="@string/About"
        android:textColor="#00BCD4"
        android:textColorHighlight="#03A9F4"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#00BCD4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/AboutInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AvailableOffers"
        app:layout_constraintVertical_bias="0.49" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CompanyNotes"
        android:layout_width="410dp"
        android:layout_height="168dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddNotes"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:hint="@string/AddNotes" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="1dp"
        android:text="@string/Notes"
        android:textColor="#9C27B0"
        android:textColorHighlight="#9C27B0"
        android:textColorHint="#9C27B0"
        android:textColorLink="#9C27B0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/CompanyNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AboutInfo" />

    <TableRow
        android:id="@+id/UpperLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444"
        app:layout_constraintTop_toBottomOf="@+id/AvailableOffers"></TableRow>

    <TableRow
        android:id="@+id/LowerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444"
        app:layout_constraintTop_toTopOf="@+id/AvailableOffers"></TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>






